--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,13 @@
 {% extends "base.html" %}
 
 {% block main %}
-    <!-- Content -->
+<div class="container">
+    <h1>WELCOME</h1>
+    <h3>- Log In -</h3>
+    <form>
+        <input type="email" name="email">
+        <input type="password" name="password">
+        <button>LOG IN</button>
+    </form>
+</div>
 {% endblock %}
