--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,21 @@
 body {
     background-color: rgb(123, 162, 233);
 }
+.container {
+    text-align: center;
+    margin: 50px auto;
+    width: 50%;
+    height: 50%;
+    max-width: 300px;
+    max-height: 300px;
+    padding: 50px;
+    border-radius: 10px;
+    background-color: white;
+}
+.field {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: left;
+    margin-bottom: 20px;
+}
