--- a/templates/index.html
+++ b/templates/index.html
@@ -4,18 +4,25 @@
 <div class="container">
     <h1>WELCOME</h1>
     <h3>- Log In -</h3>
-    <form action="/signup">
-        <fieldset class="field">
-            <legend>Username</legend>
-            <img src="/docs/icons/user_icon.png" alt="user icon" class="icon">
-            <input type="email" name="email">
-        </fieldset>
-        <fieldset class="field">
-            <img src="/docs/icons/pw_icon.png" alt="password icon" class="icon">
-            <legend>Password</legend> 
-            <input type="password" name="password">
-        </fieldset>
-        <button>LOG IN</button>
+    <form action="/login_action" methods="POST">
+        <div class="frame">
+            <!-- <legend>Username</legend> -->
+            <img src="/static/icons/user_icon.png" alt="user icon" class="icon"> 
+            <div class="spacer-left"></div>
+            <input type="email" name="email" placeholder="Username" class="login">
+        </div>
+        <div class="frame">
+            <!-- <legend>Password</legend>  -->
+            <img src="/static/icons/pw_icon.png" alt="password icon" class="icon"> 
+            <p class="spacer-left"></p>
+            <input type="password" name="password" placeholder="Password" class="login">
+        </div>
+        <button id="login_button">LOG IN</button>
+        <div class="spacer-top"></div>
+        <div id="login_links">
+            <a href="#">Sign Up</a>
+            <a href="#">Forgot Password?</a> 
+        </div>
     </form>
 </div>
 {% endblock %}
