--- a/templates/index.html
+++ b/templates/index.html
@@ -2,25 +2,25 @@
 
 {% block main %}
 <div class="container">
+    {{query}}
     <h1>WELCOME</h1>
     <h3>- Log In -</h3>
-    <form action="/login_action" methods="POST">
+    <form action="/login_action" method="POST">
         <div class="frame">
-            <!-- <legend>Username</legend> -->
             <img src="/static/icons/user_icon.png" alt="user icon" class="icon"> 
             <div class="spacer-left"></div>
-            <input type="email" name="email" placeholder="Username" class="login">
+            <input type="email" name="email" placeholder="Email" class="login">
         </div>
         <div class="frame">
-            <!-- <legend>Password</legend>  -->
             <img src="/static/icons/pw_icon.png" alt="password icon" class="icon"> 
             <p class="spacer-left"></p>
             <input type="password" name="password" placeholder="Password" class="login">
         </div>
-        <button id="login_button">LOG IN</button>
+        <button id="wide_button">LOG IN</button>
+        <p class="msg">{{msg}}</p>
         <div class="spacer-top"></div>
         <div id="login_links">
-            <a href="#">Sign Up</a>
+            <a href="/signup">Sign Up</a>
             <a href="#">Forgot Password?</a> 
         </div>
     </form>
