--- a/static/styles.css
+++ b/static/styles.css
@@ -6,15 +6,27 @@ body {
 
 /* CONTAINERS */
 .container {
-    text-align: center;
-    margin: 50px auto;
+    position: relative;
+    margin: 40px auto;
     width: 50%;
     height: auto;
+    min-height: 400px;
     max-width: 500px;
     min-width: 280px;
     padding: 30px;
     border-radius: 10px;
+    text-align: center;
     background-color: white;
+}
+.modal {
+    text-align: center;
+    position: fixed;
+    z-index: 99; 
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(61, 60, 60, 0.897);
 }
 .frame, .frame2 {
     display: flex;
@@ -29,6 +41,18 @@ body {
 .frame2 {
     padding: 20px 10px;
     justify-content: space-evenly;
+}
+.password {
+    margin: 80px auto;
+    min-height: 0;
+    height: auto;
+}
+.top_bar {
+    width: 100%;
+    height:50px;
+    background-color: rgba(255, 255, 0);
+    position: fixed;
+    top: 0;
 }
 /* GENERIC STYLING*/
 .bold {
@@ -76,11 +100,21 @@ body {
     font-style: italic;
     color: red;
 }
+.inner_bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 20%;
+    min-width: 280px;
+    margin: 0 auto;
+    font-weight: bold;
+}
 
 /* ID's */
 #wide_button {
     width: 80%;
     height: 45px;
+    margin: 10px 0;
     background-color: rgb(93, 144, 240);
     color: white;
     font-weight: bold;
@@ -93,6 +127,11 @@ body {
 }
 #login_links {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
+}
+#button_close {
+    position: absolute;
+    top: 15px;
+    right: 15px;
 }
