--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,6 @@
 
 {% block main %}
 <div class="container">
-    {{query}}
     <h1>WELCOME</h1>
     <h3>- Log In -</h3>
     <form action="/login_action" method="POST">
@@ -21,8 +20,52 @@
         <div class="spacer-top"></div>
         <div id="login_links">
             <a href="/signup">Sign Up</a>
-            <a href="#">Forgot Password?</a> 
+            <a href="/?forgot=true">Forgot Password?</a> 
         </div>
     </form>
 </div>
+<!-- MODAL POPUP IF USER CLICKS 'FORGOT PASSWORD' -->
+{% if forgot %}
+<div class="modal">
+    <div class="container password">
+        <form action="/">
+            <button id="button_close" formaction="/">X</button>
+        </form>
+        <h1>RESET PASSWORD</h1>         
+        <form action="/index_action" method="POST">
+            <input type="hidden" name="forgot" value="true">
+            {% if stage == "1" %}
+                <input type="hidden" name="stage" value="2">
+                <div class="frame">                
+                    <img src="/static/icons/user_icon.png" alt="user icon" class="icon"> 
+                    <div class="spacer-left"></div>
+                    <input type="email" name="email" placeholder="Email" class="login">
+                </div>
+                <button id="wide_button">Submit</button>
+            {% endif %}
+
+            {% if stage == "2" %}
+                <input type="hidden" name="stage" value="3">
+                <input type="hidden" name="email" value="{{email}}">
+                <p class="bold" style="color: red">Secret question: {{question}}</p>
+                <label for="answer" class="bold">Answer:</label>
+                <input class="input-field" type="text" name="answer" required>
+                <button id="wide_button">reset password</button>
+            {% endif %}
+
+            {% if stage == "3" %}
+                <input type="hidden" name="stage" value="4">
+                <input type="hidden" name="email" value="{{email}}">
+                <label for="new_password" class="bold">Set New Password:</label>
+                <input class="input-field" type="password" name="new_password" required>
+                <button id="wide_button">save</button>
+            {% endif %}
+
+            
+            <p class="msg">{{msg}}</p>
+        </form>
+    </div>
+</div>
+{% endif %}
+
 {% endblock %}
