--- a/templates/signup.html
+++ b/templates/signup.html
@@ -35,8 +35,7 @@
         <p class="msg">{{msg}}</p>
         <div class="spacer-top"></div>
         <div id="login_links">
-            <a href="/">Back</a>
-            <a href="#">Forgot Password?</a> 
+            <a href="/">Cancel</a>
         </div>
     </form>
 
