--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Base HTML template</title>
     <link rel="stylesheet" href="/static/styles.css">
-    <style>
+    <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">    <style>
     {% if session['username'] %}        
         body {
             margin: 80px auto;
