CSS styling of login pages

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
         <section class="inner_bar">
             <p>WELCOME {{ session['username'].upper() }}!</p>
             <button>Log Out</button>
+            <img src="/static/icons/cog_icon.png" alt="user icon" class="icon" id="cog"> 
         </section>
     </form>    
 {% endif %}   
