--- a/static/styles.css
+++ b/static/styles.css
@@ -1,5 +1,11 @@
 body {
-    background-color: rgb(93, 144, 240);
+    height: 1500px;
+    width: 100%;
+    background-image:
+    linear-gradient(red, transparent),
+    linear-gradient(to top left, lime, transparent),
+    linear-gradient(to top right, blue, transparent);
+    background-blend-mode: screen;
 }
 /* GRID ASSIGNMENTS */
 
@@ -46,20 +52,36 @@ body {
     margin-bottom: 20px;
     padding: 5px;
 }
+.frame.forgot {
+    width: 80%;
+    margin: 0 auto;
+}
 .frame2 {
     padding: 20px 10px;
+    border: none;
     justify-content: space-evenly;
 }
 .top_bar {
     width: 100%;
     height:50px;
-    background-color: rgba(255, 255, 0);
+    color: rgb(0, 255, 247);
+    background-color: rgb(28, 26, 28);
     position: fixed;
     top: 0;
+    z-index: 99;
 }
 /* GENERIC STYLING*/
+.core-color1 {
+    color: rgb(48, 48, 100);
+}
+.core-color2 {
+    color: rgb(15, 176, 197);
+}
 .bold {
     font-weight: bold;
+}
+.italic {
+    font-style: italic;
 }
 .spacer-top {
     margin: 30px 0;
@@ -83,9 +105,10 @@ body {
 h1 {
     font-size: 36px;
 }
-h1, h2, h3, h4 {
+h1, h2, h3, h4, h5 {
     font-family: 'Monoton', cursive;
     letter-spacing: 2px;
+    word-spacing: 5px;
     color:rgb(65, 12, 173)
 }
 /* CLASSES */
@@ -126,10 +149,11 @@ h1, h2, h3, h4 {
 #wide_button {
     width: 80%;
     height: 45px;
-    margin: 10px 0;
+    margin: 15px 0;
     background-color: rgb(93, 144, 240);
     color: white;
     font-weight: bold;
+    text-transform: uppercase;
     border: none;
     border-radius: 6px;
     font-size: 16px;
@@ -147,4 +171,12 @@ h1, h2, h3, h4 {
     position: absolute;
     top: 15px;
     right: 15px;
+}
+#cog {
+    background-color: rgb(214, 210, 210);
+    border: solid black 1px;
+    padding: 3px;
+    position: absolute;
+    right: 10px;
+    top: 8px;
 }
