- Created admin page. Displays users table from DB, for Admins to Edit/Delete if required. - Added buttons to top navigation bar. Tailored Admin button appears for those with admin privileges only. - Added routing for home, admin and settings pages - including validation to ensure that the user is logged in. - Added CSS keyframes and @media queries for responsive design.

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,4 +5,22 @@
 HOME PAGE
 <p class="msg">{{msg}}</p>
 
+
+{% if settings_clicked %}
+<div class="modal">
+    <div class="container password">
+        <form action="/">
+            <button id="button_close" formaction="/">X</button>
+        </form>
+        <h1>SETTINGS</h1>         
+        <form action="/settings_action" method="POST">
+            <input type="hidden" name="forgot" value="true">
+            <!-- give user ability to persalise account -->
+            <input type="checkbox">Activate something
+        </form>         
+        <p class="msg">{{msg}}</p>
+        </form>
+    </div>
+</div>
+{% endif %}
 {% endblock %}
