--- a/static/styles.css
+++ b/static/styles.css
@@ -7,6 +7,24 @@ body {
     linear-gradient(to top right, blue, transparent);
     background-blend-mode: screen;
 }
+/* KEYFRAME ANIMNATIONS */
+@keyframes wave {
+    0% {
+        border-image-source: linear-gradient(to top left, #c80000, rgb(255, 230, 0));
+    }
+    25% {
+        border-image-source: linear-gradient(to top right, #c80000, rgb(255, 230, 0));
+    }
+    50% {
+        border-image-source: linear-gradient(to bottom right, #c80000, rgb(255, 230, 0));
+    }
+    75% {
+        border-image-source: linear-gradient(to bottom left, #c80000, rgb(255, 230, 0));
+    }
+    100% {
+        border-image-source: linear-gradient(to top left, #c80000, rgb(255, 230, 0));
+    }
+}
 /* GRID ASSIGNMENTS */
 
 
@@ -22,7 +40,11 @@ body {
     padding: 30px;
     border-radius: 10px;
     text-align: center;
-    background-color: white;
+    background-color: rgba(255, 255, 255);
+}
+.container.admin {
+    min-width: 440px;
+    max-width: 800px;
 }
 .container.password {
     margin: 80px auto;
@@ -63,12 +85,15 @@ body {
 }
 .top_bar {
     width: 100%;
-    height:50px;
-    color: rgb(0, 255, 247);
+    height:60px;
+    color: rgb(255, 255, 255);
     background-color: rgb(28, 26, 28);
     position: fixed;
     top: 0;
     z-index: 99;
+}
+.top_bar h4 {
+    color: white
 }
 /* GENERIC STYLING*/
 .core-color1 {
@@ -101,6 +126,7 @@ body {
     display: flex;
     flex-direction: row;
 }
+
 /* HEADERS */
 h1 {
     font-size: 36px;
@@ -139,14 +165,15 @@ h1, h2, h3, h4, h5 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 20%;
+    width: 100%;
+    height: 100%;
     min-width: 280px;
     margin: 0 auto;
     font-weight: bold;
 }
 
 /* ID's */
-#wide_button {
+#button_wide {
     width: 80%;
     height: 45px;
     margin: 15px 0;
@@ -159,7 +186,7 @@ h1, h2, h3, h4, h5 {
     font-size: 16px;
     transition: 0.5s ease all;
 }
-#wide_button:hover {
+#button_wide:hover {
     background-color: rgb(130, 170, 243);
 }
 #login_links {
@@ -172,11 +199,59 @@ h1, h2, h3, h4, h5 {
     top: 15px;
     right: 15px;
 }
-#cog {
-    background-color: rgb(214, 210, 210);
-    border: solid black 1px;
-    padding: 3px;
-    position: absolute;
-    right: 10px;
-    top: 8px;
+#button_flex {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 65%;
+    max-width: 350px;
 }
+.button_top {
+    margin: 0 5px;
+    background-color: rgb(255, 255, 255);
+    border: 4px solid;
+    border-image-slice: 1;
+    border-image-source: linear-gradient(to top left, #c80000, rgb(255, 230, 0));
+    padding: 3px;    
+    animation: wave 7s infinite;
+    transition: 0.5s ease all;
+}
+.button_top:hover {
+    background-color: rgb(251, 227, 227);
+}
+#logout, #admin, #home {
+    padding: 7.5px;
+    width: 75px;
+    font-weight: bold;
+}
+#table-users {
+    margin: 30px auto;
+    width: 100%;
+    border-spacing: 0;
+    border: solid black 1px;
+    background-color: rgba(255, 255, 255, 0.824);
+}
+th, td, tr {
+    border: solid black 1px;
+    background-color: rgb(190, 245, 250);
+    padding: 5px 10px;
+}
+
+/* MEDIA QUERIES */
+@media screen and (max-width: 550px) {
+    .top_bar {
+        display: flex;
+    }
+    .inner_bar {
+        margin: 0 10px;
+        width: 100%;
+        position: relative;
+        justify-content: space-between;
+        align-items: center;
+        float: left;
+    }
+    .inner_bar p {
+        font-size: 14px;
+    };
+}
+
