--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">    <style>
     {% if session['username'] %}        
         body {
-            margin: 80px auto;
+            margin: 100px auto;
         }
     {% endif %}   
     </style>
@@ -18,9 +18,17 @@
 {% if session['username'] %}        
     <form class="top_bar" action="/logout_action">
         <section class="inner_bar">
-            <p>WELCOME {{ session['username'].upper() }}!</p>
-            <button>Log Out</button>
-            <img src="/static/icons/cog_icon.png" alt="user icon" class="icon" id="cog"> 
+            <h4>WELCOME {{ session['username'].upper() }}!</h4>
+        {% if session['admin'] %}
+            <form>
+                <div id="button_flex">
+                    <button class="button_top" id="admin" formaction="/admin">Admin</button>
+        {% endif %}
+                    <button class="button_top" id="home" formaction="/home">Home</button> 
+                    <button class="button_top" id="logout" formaction="/logout_action">Logout</button>
+                    <a href="/settings"><img src="/static/icons/cog_icon.png" alt="user icon" class="icon button_top" id="cog"></a>
+                </div>
+            </form>
         </section>
     </form>    
 {% endif %}   
