- Added function to handle API results to use on page. - play.html created to handle incoming card, with some CSS prepped - three buttons generated (random order) with only 1 being the correct answer

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -22,8 +22,9 @@
             <form action="/delete_user">
                 <input type="hidden" name="id" value="{{user[0]}}">
                 <td class="flex-col">
-                    <button formaction="/edit_user">Edit</button>
-                    <button>Delete</button>
+                    <!-- CREATE EDIT PAGE / CODE TO DELETE USER BY ID : MODAL TO CONFIRM DELETION? -->
+                    <button formaction="/edit_user" class="button-users">Edit</button>
+                    <button class="button-users">Delete</button>
                 </td>
             </form>
         </tr>
