--- a/static/styles.css
+++ b/static/styles.css
@@ -29,6 +29,12 @@ body {
 
 
 /* CONTAINERS */
+.transparent-background-fixed {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+}
 .container {
     position: relative;
     margin: 40px auto;
@@ -51,7 +57,6 @@ body {
     min-width: 300px;
     max-width: 550px;
     min-height: 0;
-    height: auto;
     border: solid rgb(13, 197, 234) 5px;
 }
 .modal {
@@ -74,14 +79,14 @@ body {
     margin-bottom: 20px;
     padding: 5px;
 }
-.frame.forgot {
-    width: 80%;
-    margin: 0 auto;
-}
 .frame2 {
     padding: 20px 10px;
     border: none;
     justify-content: space-evenly;
+}
+.frame.forgot {
+    width: 80%;
+    margin: 0 auto;
 }
 .top_bar {
     width: 100%;
@@ -124,7 +129,8 @@ body {
 }
 .flex-row {
     display: flex;
-    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 /* HEADERS */
@@ -171,6 +177,19 @@ h1, h2, h3, h4, h5 {
     margin: 0 auto;
     font-weight: bold;
 }
+.button-users {
+    margin: 1px auto;
+    width: 80px;
+}
+.button-hero {
+    margin: 30px 0;
+    padding: 5px;
+    min-width: 150px;
+    min-height: 60px;
+    border-radius: 10px;
+    text-transform: uppercase;
+    background-color: rgba(150, 5, 234, 0.155);
+}
 
 /* ID's */
 #button_wide {
@@ -213,7 +232,7 @@ h1, h2, h3, h4, h5 {
     border-image-slice: 1;
     border-image-source: linear-gradient(to top left, #c80000, rgb(255, 230, 0));
     padding: 3px;    
-    animation: wave 7s infinite;
+    animation: wave 4s infinite;
     transition: 0.5s ease all;
 }
 .button_top:hover {
@@ -225,7 +244,7 @@ h1, h2, h3, h4, h5 {
     font-weight: bold;
 }
 #table-users {
-    margin: 30px auto;
+    margin: 40px auto;
     width: 100%;
     border-spacing: 0;
     border: solid black 1px;
@@ -234,7 +253,7 @@ h1, h2, h3, h4, h5 {
 th, td, tr {
     border: solid black 1px;
     background-color: rgb(190, 245, 250);
-    padding: 5px 10px;
+    padding: 3px;
 }
 
 /* MEDIA QUERIES */
@@ -253,5 +272,29 @@ th, td, tr {
     .inner_bar p {
         font-size: 14px;
     };
+    .character_img {
+        height: 180px;
+    }
+    h1 {
+        font-size: 28px;
+        margin: 0;
+    }
+    h3 {
+        font-size: 16px;
+        margin: 0 0 15px 0;
+    }
+    .container.table_users {
+        padding: 0;
+    }
+    .table_users {
+        margin: 0;
+        font-size: 12px;
+        padding: 0;
+    }
 }
 
+/* TEST AREA */
+.character_img {
+    height: 300px;
+    border-radius: 15px;
+}
