--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Base HTML template</title>
-    <link rel="stylesheet" href="/static/styles.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">    <style>
     {% if session['username'] %}        
         body {
@@ -13,7 +13,7 @@
         }
     {% endif %}   
     </style>
-</head>
+</head>›
 
 <body>
 <div class="transparent-background-fixed">
