--- a/templates/play.html
+++ b/templates/play.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 
 {% block main %}
-
 <div class="container">
     <h1>GUESS THE HERO</h1>
     <h3>- EArn CArds! -</h3>
@@ -13,12 +12,13 @@
 
     
     <img src="{{character['image']}}" alt="Hero image" class="character_img">
-    <div>CHEAT {{character['name']}}</div>
+    <div>CHEAT MODE ACTIVE: {{answer}}</div>
     <form action="/play_action">
-        <input type="hidden" name="id" value="{{character['id']}}">
-        <input type="hidden" name="name" value="{{character['name']}}">
-        <input type="hidden" name="description" value="{{character['description']}}">
-        <input type="hidden" name="link" value="{{character['link']}}">
+        <input type="hidden" name="id" id="id" value="{{character['id']}}">
+        <input type="hidden" name="name" id="name" value="{{character['name']}}">
+        <input type="hidden" name="description" id="description" value="{{character['description']}}">
+        <input type="hidden" name="link" id="link" value="{{character['link']}}">
+        <input type="hidden" name="answer" id="answer" value="{{answer}}">
         <div class="flex-row">
             {% for button in buttons %}
                 <button class="button-hero bold">{{button}}</button>
@@ -27,5 +27,6 @@
     </form>      
     <i>{{attribute}}</i>
 </div>
+<script src="validate_answer.js"></script>
 
 {% endblock %}
