--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,10 @@
 
 {% block main %}
 <div class="container">
-    YOUR CARDS - Get more correct and add to your collection!
+    <h1>YOUR CARDS</h1>
+    
+    <h4> - Get more correct and add to your collection! </h4>
+    {{query}}
     <!-- for card of cards -->
     <!-- flexbox the results -->
     <div class="tile">
