--- a/templates/play.html
+++ b/templates/play.html
@@ -3,6 +3,7 @@
 {% block main %}
 <div class="container">
     <h1>GUESS THE HERO</h1>
+    {{failed}}
     <h3>- EArn CArds! -</h3>
     <div class="tile">
         <!-- Function to load random selection with status=False -->
@@ -13,11 +14,12 @@
     
     <img src="{{character['image']}}" alt="Hero image" class="character_img">
     <div>CHEAT MODE ACTIVE: {{answer}}</div>
-    <form action="/play_action">
+    <form action="/play_action" id="hero-form" method="POST">
         <input type="hidden" name="id" id="id" value="{{character['id']}}">
         <input type="hidden" name="name" id="name" value="{{character['name']}}">
         <input type="hidden" name="description" id="description" value="{{character['description']}}">
         <input type="hidden" name="link" id="link" value="{{character['link']}}">
+        <input type="hidden" name="image" id="link" value="{{character['image']}}">
         <input type="hidden" name="answer" id="answer" value="{{answer}}">
         <div class="flex-row">
             {% for button in buttons %}
@@ -27,6 +29,6 @@
     </form>      
     <i>{{attribute}}</i>
 </div>
-<script src="validate_answer.js"></script>
+<script src="/static/js/validate.js"></script>
 
 {% endblock %}
