--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -48,6 +48,10 @@ body {
     text-align: center;
     background-color: rgba(255, 255, 255);
 }
+.container.home {
+    width: 80%;
+    max-width: none;
+}
 .container.admin {
     min-width: 440px;
     max-width: 800px;
@@ -99,6 +103,23 @@ body {
 }
 .top_bar h4 {
     color: white
+}
+.tile {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+.card {
+    margin: 10px;
+    height: 400px;
+    max-width: 250px;
+    min-width: 200px;
+    padding: 10px;
+    border: solid black 1px;
+    border-radius: 10px;
+    /* background-color: rgb(204, 204, 193); */
 }
 /* GENERIC STYLING*/
 .core-color1 {
