--- a/templates/signup.html
+++ b/templates/signup.html
@@ -25,7 +25,7 @@
             <input class="input-field" type="text" name="answer" maxlength=30 required>
         </div>
         
-        <button id="button_wide">CREATE ACCOUNT</button>
+        <button class="button_wide">CREATE ACCOUNT</button>
         <p class="msg">{{msg}}</p>
         <div class="spacer-top"></div>
         <div id="login_links">
