--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -51,13 +51,15 @@
 }
 
 body {
-    height: 1500px;
+    height: 100%;
+    min-height: 1500px;
     width: 100%;
     background-image:
     linear-gradient(red, transparent),
     linear-gradient(to top left, lime, transparent),
     linear-gradient(to top right, blue, transparent);
     background-blend-mode: screen;
+    animation: none;
 }
 .party {
     animation: partymode 6s infinite;
@@ -87,14 +89,7 @@ body {
 }
 .container.wide {
     width: 80%;
-    max-width: none;
-}
-.container.password {
-    margin: 80px auto;
-    min-width: 300px;
-    max-width: 550px;
-    min-height: 0;
-    border: solid rgb(13, 197, 234) 5px;
+    max-width: 1200px;
 }
 .frame, .frame2 {
     display: flex;
@@ -230,22 +225,12 @@ h1, h2, h3, h4, h5 {
     margin: 1px auto;
     width: 80px;
 }
-.button-hero {
-    margin: 30px 0;
-    padding: 5px;
-    min-width: 150px;
-    min-height: 60px;
-    border-radius: 10px;
-    text-transform: uppercase;
-    background-color: rgba(150, 5, 234, 0.155);
-    transition: 2s ease all;
-}
 .button_wide {
     width: 80%;
-    max-width: 400px;
+    max-width: 600px;
     height: 45px;
     margin: 15px 0;
-    background-color: rgb(93, 144, 240);
+    background-color: rgb(70, 121, 216);
     color: white;
     font-weight: bold;
     text-transform: uppercase;
@@ -255,31 +240,22 @@ h1, h2, h3, h4, h5 {
     transition: 0.5s ease all;
 }
 .button_wide:hover {
-    background-color: rgb(130, 170, 243);
+    letter-spacing: 3px;
+    word-spacing: 3px;
+    font-size: 16px;
+    background-color: rgb(105, 142, 212);
     cursor: pointer;
 }
 /* ID's */
-#modal {
-    visibility: hidden;
-    text-align: center;
-    position: fixed;
-    z-index: 99; 
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(61, 60, 60, 0.897);
-}
+
+
+
 #login_links {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
-#button_close {
-    position: absolute;
-    top: 15px;
-    right: 15px;
-}
+
 #button_flex {
     display: flex;
     justify-content: space-around;
@@ -325,7 +301,23 @@ th, td, tr {
 .character_img {
     height: auto;
     width: 100%;
+    max-height: 450px;
     border-radius: 15px;
+}
+#hero-choices {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 0;
+}
+.button-hero {
+    padding: 12px;
+    width: 32%;
+    min-height: 70px;
+    border-radius: 10px;
+    text-transform: uppercase;
+    transition: 2s ease all;
+    background-color: rgba(220, 171, 247, 0.39);
 }
 .no-click {
     pointer-events: none;
@@ -338,6 +330,7 @@ th, td, tr {
     background-color: red;
     transition: 1.5s ease all;
 }
+
 
 /* MEDIA QUERIES */
 @media screen and (max-width: 550px) {
@@ -366,6 +359,9 @@ th, td, tr {
         font-size: 16px;
         margin: 0 0 15px 0;
     }
+    .container {
+        margin: 10px auto;
+    }
     .container.table_users {
         padding: 0;
     }
@@ -383,6 +379,49 @@ th, td, tr {
     .top_bar {
         width: 100%;
     }
+    #hero-choices {
+        flex-direction: column;
+    }
+    .button-hero {
+        width: 100%;
+        margin: 5px 0;
+        min-height: 0;
+    }
 }
+
+/* MODALS */
+.modal {    
+    text-align: center;
+    position: fixed;
+    z-index: 99; 
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(61, 60, 60, 0.897);
+}
+.modal.activate_modal {
+    visibility: hidden;
+}
+.modal.settings {
+    visibility: hidden;
+}
+.modal.leaderboard {
+    visibility: hidden;
+}
+.button_close {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+}
+.container.content {
+    margin: 180px auto;
+    min-width: 300px;
+    max-width: 550px;
+    min-height: 0;
+    border: solid rgb(13, 197, 234) 5px;
+}
+
+
 
 /* TEST AREA */
